# nuclei-sdk

./: .gitignore  CMakeLists.txt  main.c
NMSIS/Core/: CMakeLists.txt
SoC/gd32vf103/Common/: CMakeLists.txt
SoC/gd32vf103/Common/Source/: system_gd32vf103.c
SoC/gd32vf103/Common/Source/GCC/: startup_gd32vf103.S
SoC/gd32vf103/Common/cmake/: toolchain_setup.cmake
cmake/: project_setup.cmake  toolchain_setup.cmake
